Digital Clock which is for practice of reactjs hooks

--- a/Digital Clock/index.html
+++ b/Digital Clock/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#000000" />
-  <title>Netflix Serieses</title>
+  <title>Digital Clock</title>
   
   <!-- React -->
   <script src="https://unpkg.com/systemjs@0.21.6/dist/system.js"></script>
