--- a/Get Current Time/index.html
+++ b/Get Current Time/index.html
@@ -8,7 +8,11 @@
   <title>Get Current Time</title>
   
   <!-- React -->
-  <script src="https://unpkg.com/systemjs@0.21.6/dist/system.js"></script>
+ <!-- <script src="https://unpkg.com/systemjs@0.21.6/dist/system.js"></script> -->
+  <script type="application/javascript" src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script type="application/javascript" src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+
   
 </head>
 
@@ -16,6 +20,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!-- Project -->
-  <script src="systemjs.config.js"></script>
+  <!-- <script src="systemjs.config.js"></script> -->
+  <script src="./src/index.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
