--- a/Intro to Forms/index.html
+++ b/Intro to Forms/index.html
@@ -5,10 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#000000" />
-  <title>Get Current Time</title>
+  <title>Slot Machine</title>
   
   <!-- React -->
- <script src="https://unpkg.com/systemjs@0.21.6/dist/system.js"></script>
+  <script src="https://unpkg.com/systemjs@0.21.6/dist/system.js"></script>
+  
 </head>
 
 <body>
